SF Primes/src/objects/EMP_IT_Support_List__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EMP IT Support List</label>
</CustomObject>